name:                projectlab
version:             0.1.0.0
synopsis:            Simple FEM solver
description:         Please see README.md
homepage:            http://github.com/danimad/projectlab#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Berecz
maintainer:          daniel.berecz@gmail.com
copyright:           2015 Daniel Berecz
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable projectlab
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       criterion
